// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Countdown calls callback 10 times with proper values Callback #0 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      9
    </span>
    <svg
      className="countdown__animation is-high"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #1 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      8
    </span>
    <svg
      className="countdown__animation is-high"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #2 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      7
    </span>
    <svg
      className="countdown__animation is-medium"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #3 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      6
    </span>
    <svg
      className="countdown__animation is-medium"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #4 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      5
    </span>
    <svg
      className="countdown__animation is-medium"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #5 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      4
    </span>
    <svg
      className="countdown__animation is-medium"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #6 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      3
    </span>
    <svg
      className="countdown__animation is-low"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #7 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      2
    </span>
    <svg
      className="countdown__animation is-low"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #8 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      1
    </span>
    <svg
      className="countdown__animation is-low"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown calls callback 10 times with proper values Callback #9 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      0
    </span>
  </div>
</Countdown>
`;

exports[`Countdown renders correctly 1`] = `
<Countdown
  className=""
  onTick={[Function]}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      10
    </span>
    <svg
      className="countdown__animation is-high"
    >
      <circle
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;
